--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 # General Imports
 pydantic==1.10.4
 uvicorn==0.20.0
-# Imports FastAPI
-fastapi==0.90.0 # Edit Here
-# Imports Model
-lightgbm==3.3.2
-# GCP Imports
-google-cloud-storage==1.44.0
+fastapi==0.90.0
+mpmath==1.2.1
+pytest==7.1.1
+httpx==0.24.0
+
